<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="316dp"
        android:layout_height="439dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn1"
            android:layout_width="315dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient2"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="CompareActivity"
            android:text="@string/compare"
            android:textAlignment="viewEnd"
            android:textColor="@color/lblue"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button

            android:id="@+id/btn2"
            android:layout_width="315dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient3"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="OrderActivity"
            android:text="@string/order"
            android:textAlignment="viewEnd"
            android:textColor="@color/lblue"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="315dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="ComposeActivity"
            android:text="@string/compose"
            android:textAlignment="viewEnd"
            android:textColor="@color/lblue"
            android:textSize="22sp"
            android:textStyle="italic"
            android:hint=""/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/planet" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="170dp"
        android:rotation="325"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/p" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="165dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/compose1" />

    <Button
        android:id="@+id/mute_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="🔊"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@drawable/s1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/s2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:srcCompat="@drawable/s4" />

</androidx.constraintlayout.widget.ConstraintLayout>